Fixed padding issue on paragraph wrap

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,13 +19,15 @@ html, body
     margin: 0px;
     padding: 0px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition-duration: 0.5s;
+    background-color: rgb(43, 43, 43);
 }
 
 header
 {
     background-color: rgb(33, 33, 33);
     color: rgb(205, 205, 205);
-    border-bottom: 2px solid darkred;
+    border-bottom: 1px rgb(85, 85, 85) solid;
     height: 40px;
     width: 100%;
     font-size: 24px;
@@ -46,7 +48,8 @@ header span
     background-color: rgb(43, 43, 43);
     color: rgb(205, 205, 205);
     overflow: auto;
-    height: calc(100vh - 86px);
+    height: calc(100vh - 83px);
+    padding-left: 30px;
 }
 
 .pagecontent
@@ -62,8 +65,8 @@ nav
     //grid-column-start: 1;
     //grid-column-end: 2;
     //grid-row: 2;
-    background-color: rgb(63, 63, 63);
-    border-bottom: 2px solid darkred;
+    background-color: rgb(38, 38, 38);
+    border-bottom: 1px rgb(85, 85, 85) solid;
 }
 
 nav a
@@ -72,7 +75,7 @@ nav a
     margin: -2px;
     padding: 4px;
     color: rgb(205, 205, 205);
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(38, 38, 38);
     text-decoration: none;
     transition-duration: .2s;
     border-left: 1px rgb(85, 85, 85) solid;
@@ -101,11 +104,11 @@ nav a:active
 
 .sidenav
 {
-    border-right: 2px solid darkred;
-    border-bottom: 2px solid darkred;
+    border-right: 1px rgb(85, 85, 85) solid;
+    border-bottom: 1px rgb(85, 85, 85) solid;
     margin-left: 0px;
     width: max-content;
-    background-color: rgb(63, 63, 63);  
+    background-color: rgb(38, 38, 38);  
     color: rgb(205, 205, 205);
     //grid-column: 1;
     //grid-row: 3;
@@ -136,15 +139,17 @@ nav a:active
         height: auto;
     }
 }
-// @media screen and (max-width:800px)
-// {
-//     .sidenav, .main
-//     {
-//         border-bottom: 0px;
-//         border-right: 0px;
-//         margin: 15px;
-//     }
-// }
+@media (max-width:800px)
+{
+    .sidenav
+    {
+        border-bottom: 0px;
+        border-right: 0px;
+        padding-left: 24px;
+        width: 100%;
+        font-size: 24px;
+    }
+}
 
 @media (max-width:800px)
 {
